<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cogumelo Notícias</string>

    <string name="blog_description">O maior site sobre a Nintendo no Brasil, atualizado diariamente com Notícias, Vídeos, Imagens e Gameplay.</string>
    <string name="search">Pesquisar</string>
    <string name="refresh">Atualizar</string>
    <string name="needinternet">Verifique sua conexão de internet</string>
    <string name="open">Abrir site</string>
    <string name="share">Compartilhar</string>
    <string name="comments">Comentários do Facebook</string>
    <string name="back">Voltar</string>
    <string name="forward">Avançar</string>
    <string name="home">Início</string>
    <string name="reload">Recarregar</string>
    <string name="cache">Limpar cache</string>
    <string name="cache2">Cache limpo!</string>
    <string name="download">Baixar imagem</string>
    <string name="copylink">Copiar link</string>
    <string name="openinbrowser">Abrir no navegador</string>
    <string name="nomore">Não há mais resultados</string>
    <string name="loadmore">Carregar mais</string>
    <string name="sourcecodelicenses">Licenças de código aberto</string>
	
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
    
    <string name="wiiu">Wii U</string>
    <string name="tresds">3DS</string>
    <string name="mario">Mario</string>
    <string name="zelda">Zelda</string>
    <string name="pokemon">Pokémon</string>
    <string name="donkeykong">Donkey Kong</string>
    <string name="metroid">Metroid</string>
    
    <string name="colors">Cores</string>
    <string name="pref_color">Escolher cor</string>
    <string name="pref_color_summary">Escolher a cor do aplicativo</string>
    <string name="pref_iconcolor">Cor dos ícones</string>
    <string name="pref_iconcolor_summary">Escolher a cor dos ícones, ideal para cores claras (reinicie o aplicativo para mudar completamente)</string>
    <string name="notifications">Notificações</string>
    <string name="pref_notification">Receber notificações</string>
    <string name="pref_notification_summary">Receber em primeira mão notificações de novos posts e vídeos do blog</string>
    <string name="content">Conteúdo</string>
    <string name="pref_imagequality">Qualidade de imagem</string>
    <string name="pref_imagequality_summary">Definir qualidade de imagem, quanto mais alta mais tempo para carregar</string>

    <string name="set">Aplicar</string>
    <string name="save">Salvar</string>

    <string name="dialog_notification">Suas notificações do site estão desativadas! Deseja ativar para receber todas as novidades em primeira mão?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="other">Outro</string>

    <string name="addshortcutwidget">Categoria do Cogumelo Notícias</string>
    <string name="widgettitle">Título do ícone</string>
    <string name="widgeticon">Categoria:</string>
    <string name="widgetcateg">Digite a categoria</string>
    <string name="createshortcut">Criar atalho</string>

    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
</resources>
