<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/sharepage"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_comments"
        android:title="@string/comments"
        app:showAsAction="always" />
    <item android:id="@+id/menu_back"
        android:title="@string/back" />
    <item
        android:id="@+id/menu_forward"
        android:title="@string/forward" />
    <item
        android:id="@+id/menu_reload"
        android:title="@string/reload" />
    <item
        android:id="@+id/menu_cache"
        android:title="@string/cache" />
</menu>
